--- a/kustom/argo-cd/base/argocd-ingress.yaml
+++ b/kustom/argo-cd/base/argocd-ingress.yaml
@@ -9,7 +9,7 @@ metadata:
     nginx.ingress.kubernetes.io/ssl-passthrough: "true"
 spec:
   rules:
-  - host: "cd.pi.logic-shift.com"
+  - host: insert.url.here
     http:
       paths:
       - path: /
