--- a/apps/kustomization.yaml
+++ b/apps/kustomization.yaml
@@ -5,6 +5,6 @@ resources:
 - templates/argocd.yaml
 - templates/root.yaml
 - templates/ingress-nginx.yaml
-#- templates/kube-prometheus-stack.yaml
+- templates/sealed-secrets.yaml
 
 namespace: argocd
