--- a/kustom-build.yaml
+++ b/kustom-build.yaml
@@ -9774,7 +9774,7 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: metadata.namespace
-        image: quay.io/argoproj/argocd:v2.4.11
+        image: docker.io/argoproj/argocd:v2.4.11
         imagePullPolicy: Always
         name: argocd-applicationset-controller
         ports:
@@ -9872,7 +9872,7 @@ spec:
         - -n
         - /usr/local/bin/argocd
         - /shared/argocd-dex
-        image: quay.io/argoproj/argocd:v2.4.11
+        image: docker.io/argoproj/argocd:v2.4.11
         imagePullPolicy: Always
         name: copyutil
         securityContext:
@@ -9913,7 +9913,7 @@ spec:
       containers:
       - command:
         - argocd-notifications
-        image: quay.io/argoproj/argocd:v2.4.11
+        image: docker.io/argoproj/argocd:v2.4.11
         imagePullPolicy: Always
         livenessProbe:
           tcpSocket:
@@ -10140,7 +10140,7 @@ spec:
           value: /helm-working-dir
         - name: HELM_DATA_HOME
           value: /helm-working-dir
-        image: quay.io/argoproj/argocd:v2.4.11
+        image: docker.io/argoproj/argocd:v2.4.11
         imagePullPolicy: Always
         livenessProbe:
           failureThreshold: 3
@@ -10189,7 +10189,7 @@ spec:
         - -n
         - /usr/local/bin/argocd
         - /var/run/argocd/argocd-cmp-server
-        image: quay.io/argoproj/argocd:v2.4.11
+        image: docker.io/argoproj/argocd:v2.4.11
         name: copyutil
         securityContext:
           allowPrivilegeEscalation: false
@@ -10434,7 +10434,7 @@ spec:
               key: otlp.address
               name: argocd-cmd-params-cm
               optional: true
-        image: quay.io/argoproj/argocd:v2.4.11
+        image: docker.io/argoproj/argocd:v2.4.11
         imagePullPolicy: Always
         livenessProbe:
           httpGet:
@@ -10637,7 +10637,7 @@ spec:
               key: otlp.address
               name: argocd-cmd-params-cm
               optional: true
-        image: quay.io/argoproj/argocd:v2.4.11
+        image: docker.io/argoproj/argocd:v2.4.11
         imagePullPolicy: Always
         livenessProbe:
           httpGet:
