--- a/apps/kustomization.yaml
+++ b/apps/kustomization.yaml
@@ -6,5 +6,5 @@ resources:
 - templates/root.yaml
 - templates/ingress-nginx.yaml
 - templates/sealed-secrets.yaml
-
+#- templates/skube-prometheus-stack.yaml
 namespace: argocd
