--- a/kustom/argo-cd/base/argocd-ingress.yaml
+++ b/kustom/argo-cd/base/argocd-ingress.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: argocd
   annotations:
     kubernetes.io/ingress.class: nginx
-    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
+    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
     nginx.ingress.kubernetes.io/ssl-passthrough: "true"
 spec:
   rules:
@@ -18,5 +18,4 @@ spec:
           service:
             name: argocd-server
             port:
-              name: https
               number: 443
